# densidade_amarelos_censo

./: 01 Extração.qmd  02 Tratamento e exibição.qmd  LICENSE  README.md  pyproject.toml
data/: cor_ou_raça.parquet
